# bora-extractor

./: .gitignore  README.md  main.py  pyproject.toml
bora_extractor/: __init__.py  config.py  extraction.py  io.py  main.py  metadata.py  ner.py  relations.py  reqs.py  schema.py  scraper.py
example_data/: links_CONSTITUCION SAS_20260201_20260228.json  links_CONSTITUCION SA_20260201_20260228.json  links_CONTRATO SRL_20260201_20260228.json
tests/: conftest.py  test_extraction.py  test_io.py  test_metadata.py  test_ner.py  test_relations.py  test_schema.py  test_scraper.py
