[project]
name = "bora-extractor"
version = "0.1.0"
description = "Extrae texto de URL y guarda información en JSON"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4",
    "pydantic>=2.13.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
bora-extractor = "bora_extractor.main:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bora_extractor*"]
exclude = ["tests*", "data*", "output*"]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
